# gtk-example

./: CMakeLists.txt  README.md  layout.glade  main.cpp
src/gui/: ViewStarter.cpp  ViewStarter.h
src/gui/Views/: MainWindow.cpp  MainWindow.h
